Refactoring and fixing sequenceNumber